<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="onboarding_school_picker_title">학교 선택</string>
    <string name="onboarding_school_picker_search_label">학교 검색</string>
    <string name="onboarding_school_picker_search_placeholder">학교 이름을 입력해 주세요</string>
    <string name="onboarding_school_picker_empty">검색 결과가 없어요</string>
    <string name="onboarding_school_picker_item_description">%1$s 선택</string>
    <string name="onboarding_school_picker_direct_action">목록에 없어요. 직접 입력할게요</string>
    <string name="onboarding_school_picker_direct_title">학교 직접 입력</string>
    <string name="onboarding_school_picker_direct_label">학교 이름</string>
    <string name="onboarding_school_picker_direct_placeholder">학교 이름을 정확히 입력해 주세요</string>
    <string name="onboarding_school_picker_direct_support">목록에 없는 학교만 직접 입력해 주세요</string>
    <string name="onboarding_school_picker_direct_confirm">이 학교로 정하기</string>
    <string name="onboarding_school_picker_direct_back">목록에서 고르기</string>
    <string name="onboarding_graduation_picker_title">졸업 예정</string>
    <string name="onboarding_graduation_picker_year_label">연도</string>
    <string name="onboarding_graduation_picker_month_label">월</string>
    <string name="onboarding_graduation_picker_year">%1$d년</string>
    <string name="onboarding_graduation_picker_month">%1$d월</string>
    <string name="onboarding_graduation_picker_selected_state">선택됨</string>
    <string name="onboarding_graduation_picker_unselected_state">선택 안 됨</string>
    <string name="onboarding_graduation_picker_confirm">선택 완료</string>
    <string name="onboarding_sheet_cancel">취소</string>
</resources>
